--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,26 +4,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "expo start",
+    "dev": "expo start --dev-client",
     "lint": "eslint --ext js,ts,tsx .",
-    "build": "expo export --output-dir ./build --platform all",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "build": "expo prebuild",
+    "export": "expo export --output-dir ./build --platform all",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios -d",
     "web": "expo start --web",
     "eas-build-pre-install": "npm install --global pnpm@7.x",
     "eas-build-post-install": "pnpm run -w build:mobile"
   },
   "dependencies": {
     "@acme/feature-home": "*",
-    "expo": "^47.0.0",
+    "expo": "~47.0.12",
     "expo-dev-client": "~2.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@acme/eslint-config": "*",
@@ -43,7 +45,9 @@
     ],
     "overrides": [
       {
-        "files": ["*.js"],
+        "files": [
+          "*.js"
+        ],
         "env": {
           "node": true
         }
